# python-project-lvl2-1

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: .travis.yml  diff.py
gendiff/scripts/: gendiff.py
gendiff/tests/: conftest.py  test_diff.py
gendiff/tests/fixtures/: result.txt
